Fix menu not closing when scrolling down on small screens in v8.0

--- a/versions/8.0/style.css
+++ b/versions/8.0/style.css
@@ -1353,6 +1353,10 @@ footer hr {
         height: calc((15px * 2) + (25px * (4 - 1)) + ((5px * (3 - 1)) + (40px * 3)) + ((5px * (1 - 1)) + (40px * 1)) + ((5px * (2 - 1)) + (40px * 2)) + 50px);
     }
 
+    #navbar.scrolling-down ~ .menu {
+        height: 0px;
+    }
+
     .menu-shortcut-container {
         display: flex;
     }
